--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <img src="https://host.afges.org/images/logos/logoImg-qkWAlu" alt="">
-    <h3>CA FONCTIONNE !</h3>
+    <h3>@domain_name@ fonctionne!</h3>
     <h1>Bienvenue sur votre nouveau site!</h1>
     <h2>Configurez dès à présent votre contenu!</h2>
 </body>
